--- a/sites/gbm/scss/elements/_form-button.scss
+++ b/sites/gbm/scss/elements/_form-button.scss
@@ -85,7 +85,7 @@
 
 .btn--neutral {
 	background: $button-neutral-bg;
-	border: $border;
+	border: $border-width $border-style $input-border-color;
 	color: $button-neutral-font-color;
 	
 	.icon {
