--- a/sites/gbm/scss/elements/_type-list.scss
+++ b/sites/gbm/scss/elements/_type-list.scss
@@ -51,7 +51,7 @@ ul {
 
 	li {
 		background: none;
-		border-bottom: 2px solid $border-color;
+		border-bottom: $border;
 		margin-bottom: $vertical-spacing/2;
 		padding: 0 0 $vertical-spacing/2;
 		
