--- a/sites/gbm/scss/layout/_layout-contentinfo.scss
+++ b/sites/gbm/scss/layout/_layout-contentinfo.scss
@@ -8,10 +8,10 @@
  */
  
 .page-foot {
-	background: $grey-darker url(../img/interface/bg-tile-dark.png) center top;
+	background: $grey-darker url(../img/interface/bg-tile-wood.jpg) center top;
 	box-shadow: inset 0 1px 5px rgba($black,.50);
 	@include clearfix;
-	color: $grey;
+	color: $grey-lighter;
 	@include font-size(13);
 	padding: $vertical-spacing * 4 $gutter / 2 0;
 	text-shadow: 0 1px 1px $black;
@@ -31,7 +31,7 @@
 	a,
 	a:visited {
 		background-image: none;
-		color: $grey;
+		color: $grey-lighter;
 		padding: 0;
 		text-shadow: none;
 	}
@@ -156,9 +156,9 @@
  */
  
 .footnote{
-	background: rgba($black,.25);
-	border-top: 1px solid rgba($white,.04);
-	box-shadow: 0 -1px 5px rgba($black,.50);
+	//background: rgba($black,.25);
+	//border-top: 1px solid rgba($white,.04);
+	//box-shadow: 0 -1px 5px rgba($black,.50);
 	@include clearfix;
 	margin: $vertical-spacing * 2 0 0 (-$gutter / 2);
 	padding: $vertical-spacing $gutter / 2 $vertical-spacing / 4;
@@ -166,6 +166,7 @@
 	text-align: center;
 	width: 100%;
 	
+/*
 	&:before {
 		border-top: 1px dashed rgba($white,.08);
 		content: "";
@@ -176,6 +177,7 @@
 		left: 0;
 		width: 100%;
     }
+*/
 	
 	@include bp(bp5) {
 		margin-left: -$gutter;
@@ -198,7 +200,7 @@
 	
 	img {
 		height: 20px;
-		opacity: .25;
+		opacity: .75;
 		width: auto;
 		vertical-align: top;
 	}
