--- a/sites/gbm/scss/modules/_modules-filters.scss
+++ b/sites/gbm/scss/modules/_modules-filters.scss
@@ -387,7 +387,7 @@
 .qty__down,
 .qty__up,
 .qty__input {
-	border: $border-width $border-style $border-color;
+	border: $input-border-width $input-border-style $input-border-color;
 	box-sizing: border-box;
 	display: block;
 	float: left;
