--- a/sites/gbm/scss/layout/_layout-banner.scss
+++ b/sites/gbm/scss/layout/_layout-banner.scss
@@ -95,7 +95,7 @@
  */
  
 .page-head {
-	background: transparent;
+	background: $white;
 	@include clearfix;
 	box-sizing: border-box;
 	padding: 15px $gutter / 2;
@@ -108,30 +108,19 @@
 	
 	&:before {
 		background: $white;
-		box-shadow: 0 1px 2px rgba(0,0,0,.10);
+		box-shadow: 0 1px 2px rgba(0,0,0,.20);
+		//border-top: 1px dashed darken($grey-lighter,10%);
 		content: "";
 		display: block;
 		height: 1px;
-		opacity: 0;
 		position: absolute;
 		bottom: -1px;
 		left: 0;
-		transition: opacity .20s;
 		width: 100%;
 	}
 	
 	@include bp(bp5) {
 		padding: 0 $gutter;
-	}
-	
-	.fixed-header & {
-		//background: $white;
-		//position: fixed;
-		//top: 0;
-		
-		&:before {
-			opacity: 1;
-		}
 	}
 }
 
