--- a/sites/gbm/scss/modules/_modules-alert.scss
+++ b/sites/gbm/scss/modules/_modules-alert.scss
@@ -4,59 +4,69 @@
 
 
 .alert {
-	background: $alert-bg;
+	background: $alert-bg url(../img/interface/bg-tile-paper--beige.jpg) 0 0;
 	border: $border-width $border-style $alert-border-color;
 	box-sizing: border-box;
 	clear: both;
 	@include clearfix;
 	color: $alert-font-color;
 	@include font-size($alert-font-size);
+	line-height: 1.4;
 	margin-bottom: $vertical-spacing;
 	padding: $vertical-spacing / 2 $gutter / 2 0;
+	text-shadow: 0 1px 0 rgba(255,255,255,.80);
 	
-	p {
+	p {	
 		margin-bottom: $vertical-spacing / 2;
 	}
 	
 	a {
-		color: $white;
-		text-shadow: 3px 0 $alert-bg, 2px 0 $alert-bg, 1px 0 $alert-bg, -3px 0 $alert-bg, -2px 0 $alert-bg, -1px 0 $alert-bg;
+		background-image: none;
+		color: inherit;
+		padding: 0;
+		text-decoration: underline;
+		text-shadow: 0 1px 0 rgba(255,255,255,.40);
 		
 		&:visited {
-			color: $white;
+			color: inherit;
 		}
 		
 		&:hover,
 		&:focus {
-			color: $white;
+			color: $alert-heading-font-color;
 		}
 	}
 }
 
 .alert--success {
-	background: $alert-success-bg;
+	background: $alert-success-bg url(../img/interface/bg-tile-paper--green.jpg) 0 0;
 	border-color: $alert-success-border-color;
 	color: $alert-success-font-color;
-	
+
 	a {
-		//background-image: linear-gradient($grey-darker 0%, $grey-darker 100%);
-		color: $white;
-		text-shadow: 3px 0 $alert-success-bg, 2px 0 $alert-success-bg, 1px 0 $alert-success-bg, -3px 0 $alert-success-bg, -2px 0 $alert-success-bg, -1px 0 $alert-success-bg;
+		
+		&:hover,
+		&:focus {
+			color: $alert-success-heading-font-color;
+		}
 	}
 }
 
 .alert--error {
-	background: $alert-error-bg;
+	background: $alert-error-bg url(../img/interface/bg-tile-paper--red.jpg) 0 0;
 	border-color: $alert-error-border-color;
 	color: $alert-error-font-color;
+	text-shadow: 0 1px 0 rgba(0,0,0,.20);
 	
 	a {
-		//background-image: linear-gradient($grey-darker 0%, $grey-darker 100%);
-		color: $white;
-		text-shadow: 3px 0 $alert-error-bg, 2px 0 $alert-error-bg, 1px 0 $alert-error-bg, -3px 0 $alert-error-bg, -2px 0 $alert-error-bg, -1px 0 $alert-error-bg;
+		text-shadow: 0 1px 0 rgba(0,0,0,.10);
+		
+		&:hover,
+		&:focus {
+			color: $alert-error-heading-font-color;
+		}
 	}
 }
-
 
 .alert__close {
 	background-image: none;
@@ -68,14 +78,16 @@
 	transform-origin: center;
 	
 	.icon {
-		fill: lighten($alert-bg,15%);
+		fill: $alert-font-color;
+		height: 15px;
+		width: 15px;
 		
 		.alert--success & {
-			fill: darken($alert-success-bg,15%);
+			fill: $alert-success-font-color;
 		}
 		
 		.alert--error & {
-			fill: darken($alert-error-bg,15%);
+			fill: $alert-error-font-color;
 		}
 	}
 	
@@ -84,25 +96,48 @@
 		transform: rotate(90deg);
 		
 		.icon {
-			fill: $white;
-			opacity: 1;
+			fill: $alert-heading-font-color;
+			
+			.alert--success & {
+				fill: $alert-success-heading-font-color;
+			}
+			
+			.alert--error & {
+				fill: $alert-error-heading-font-color;
+			}
 		}
 	}	
 }
 
 .alert__title {
-	color: $white;
+	color: $alert-heading-font-color;
 	@include font-size($alert-heading-font-size);
 	margin-bottom: $vertical-spacing / 4;
+	
+	.alert--success & {
+		color: $alert-success-heading-font-color;
+	}
+	
+	.alert--error & {
+		color: $alert-error-heading-font-color;
+	}
 	
 	&:last-child {
 		margin-bottom: $vertical-spacing / 2;
 	}
 	
 	.icon {
-		fill: $white;
+		fill: $alert-font-color;
 		margin-right: $gutter / 4;
 		position: relative;
 		top: -1px;
+		
+		.alert--success & {
+			fill: $alert-success-font-color;
+		}
+		
+		.alert--error & {
+			fill: $alert-error-font-color;
+		}
 	}
 }
