--- a/sites/gbm/scss/modules/_modules-minicart.scss
+++ b/sites/gbm/scss/modules/_modules-minicart.scss
@@ -56,7 +56,7 @@
  */
  
 .mini-cart__head {
-	border-bottom: $border-width $border-style $border-color;
+	border-bottom: $border;
 	@include clearfix;
 	padding-bottom: $vertical-spacing;
 }
@@ -102,7 +102,7 @@
  */
  
 .mini-cart__item {
-	border-bottom: $border-width $border-style $border-color;
+	border-bottom: $border;
     clear: both;
     @include clearfix;
     padding: $vertical-spacing 120px $vertical-spacing 75px;
