--- a/sites/gbm/scss/elements/_form.scss
+++ b/sites/gbm/scss/elements/_form.scss
@@ -65,7 +65,7 @@ fieldset {
 	border: $border;
 	box-sizing: border-box;
 	margin-bottom: $vertical-spacing / 2;
-	padding: $vertical-spacing $gutter $vertical-spacing / 2;
+	padding: $vertical-spacing $gutter 0;
 	min-width: 0; 
 
 	&:last-of-type {
@@ -115,6 +115,7 @@ label {
 	
 	small {
 		font-weight: 400;
+		text-transform: capitalize;
 	}
 	
 	+ p {
