--- a/sites/gbm/scss/modules/_modules-filters.scss
+++ b/sites/gbm/scss/modules/_modules-filters.scss
@@ -1,6 +1,14 @@
 
+.hide {
+	display: none;
+}
+
 .align-center {
 	text-align: center;
+}
+
+.align-right {
+	text-align: right;
 }
 
 .newsletter {
