--- a/sites/gbm/scss/elements/_site.scss
+++ b/sites/gbm/scss/elements/_site.scss
@@ -37,7 +37,7 @@ html {
  */
 
 body {
-	background: $body-background url(../img/interface/bg-tile-paper.jpg) center 0;
+	background: $body-background url(../assets/bg-tile-paper.jpg) center 0;
 	color: $font-color;
 	font-variant-ligatures: common-ligatures discretionary-ligatures historical-ligatures;
 	font-family: $font-family;
