--- a/sites/gbm/scss/elements/_type-list.scss
+++ b/sites/gbm/scss/elements/_type-list.scss
@@ -33,7 +33,7 @@ ul {
 	list-style: none;
 	
 	li {
-		background: url(../img/interface/bullet.svg) no-repeat 0 8px;
+		background: url(../assets/bullet.svg) no-repeat 0 8px;
 		background-size: 5px 5px;
 		padding-left: 15px;
 	}
