--- a/sites/gbm/scss/layout/_layout-mmenu.scss
+++ b/sites/gbm/scss/layout/_layout-mmenu.scss
@@ -62,7 +62,7 @@
 
 .mm-panel,
 .mm-panels {
-    background: transparent;
+    background: inherit;
     border-color: inherit;
     box-sizing: border-box;
     margin: 0
@@ -427,19 +427,9 @@
 }
 
 .mm-menu {
-    background: $white;
-    border-color: $border-color;
-    color: $link-color;
-    
-    &:before {
-	    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,.10) 100%);
-	    content: "";
-	    height: 100%;
-	    position: absolute;
-	    top: 0;
-	    right: 0;
-	    width: 4px;
-    }
+    background: #f3f3f3;
+    border-color: rgba(0, 0, 0, .1);
+    color: rgba(0, 0, 0, .75)
 }
 
 .mm-menu .mm-navbar a,
@@ -801,11 +791,10 @@
 }
 
 .mm-searchfield input {
-    background: none;
-    border: $input-border-width $input-border-style $input-border-color;
+    border: none!important;
     outline: 0!important;
     box-shadow: none!important;
-    border-radius: 0;
+    border-radius: 4px;
     font: inherit;
     font-size: inherit;
     line-height: 26px;
@@ -891,8 +880,8 @@
 }
 
 .mm-searchfield input {
-    background: none;
-    color: $input-font-color;
+    background: rgba(0, 0, 0, .05);
+    color: rgba(0, 0, 0, .75)
 }
 
 .mm-panel__noresultsmsg {
