--- a/sites/gbm/scss/modules/_modules-minicart.scss
+++ b/sites/gbm/scss/modules/_modules-minicart.scss
@@ -24,6 +24,10 @@
 	width: 500px;
 	max-width: calc(100% - 30px);
 	
+	&.hide {
+		display: none;
+	}
+	
 	.fixed-header & {
 		position: fixed;
 	}
