--- a/sites/gbm/css/theme.css
+++ b/sites/gbm/css/theme.css
@@ -59,42 +59,36 @@ article, aside, figure, footer, header, hgroup, nav, section {
 /*!
  * Datepicker v0.6.5
  * https://github.com/fengyuanchen/datepicker
- *
- * Copyright (c) 2014-2018 Chen Fengyuan
- * Released under the MIT license
- *
- * Date: 2018-03-31T06:16:43.444Z
  */
 .datepicker-container {
-  background-color: #fff;
+  background-color: white;
   direction: ltr;
   font-size: 12px;
+  font-size: 1.2rem;
   left: 0;
   line-height: 30px;
   position: fixed;
   top: 0;
   -ms-touch-action: none;
-  touch-action: none;
+      touch-action: none;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   width: 210px;
   z-index: -1;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none; }
-
-.datepicker-container:after, .datepicker-container:before {
-  border: 5px solid transparent;
-  content: " ";
-  display: block;
-  height: 0;
-  position: absolute;
-  width: 0; }
+  .datepicker-container::before, .datepicker-container::after {
+    border: 8px solid transparent;
+    content: " ";
+    display: block;
+    height: 0;
+    position: absolute;
+    width: 0; }
 
 .datepicker-dropdown {
-  border: 1px solid #ccc;
-  box-shadow: 0 3px 6px #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   box-sizing: content-box;
   position: absolute;
   z-index: 1; }
@@ -102,37 +96,40 @@ article, aside, figure, footer, header, hgroup, nav, section {
 .datepicker-inline {
   position: static; }
 
-.datepicker-top-left, .datepicker-top-right {
-  border-top-color: #39f; }
+.datepicker-top-left,
+.datepicker-top-right {
+  border-top: 4px solid #94121f; }
+  .datepicker-top-left::before, .datepicker-top-left::after,
+  .datepicker-top-right::before,
+  .datepicker-top-right::after {
+    border-top: 0;
+    left: 10px;
+    top: -5px; }
+  .datepicker-top-left::after,
+  .datepicker-top-right::after {
+    border-bottom-color: #94121f;
+    top: -10px; }
 
-.datepicker-top-left:after, .datepicker-top-left:before, .datepicker-top-right:after, .datepicker-top-right:before {
-  border-top: 0;
-  left: 10px;
-  top: -5px; }
+.datepicker-bottom-left,
+.datepicker-bottom-right {
+  border-bottom-color: blue; }
+  .datepicker-bottom-left::before, .datepicker-bottom-left::after,
+  .datepicker-bottom-right::before,
+  .datepicker-bottom-right::after {
+    border-bottom: 0;
+    bottom: -5px;
+    left: 10px; }
+  .datepicker-bottom-left::before,
+  .datepicker-bottom-right::before {
+    border-top-color: var(--brand-color); }
+  .datepicker-bottom-left::after,
+  .datepicker-bottom-right::after {
+    border-top-color: #fff;
+    bottom: -4px; }
 
-.datepicker-top-left:before, .datepicker-top-right:before {
-  border-bottom-color: #39f; }
-
-.datepicker-top-left:after, .datepicker-top-right:after {
-  border-bottom-color: #fff;
-  top: -4px; }
-
-.datepicker-bottom-left, .datepicker-bottom-right {
-  border-bottom-color: #39f; }
-
-.datepicker-bottom-left:after, .datepicker-bottom-left:before, .datepicker-bottom-right:after, .datepicker-bottom-right:before {
-  border-bottom: 0;
-  bottom: -5px;
-  left: 10px; }
-
-.datepicker-bottom-left:before, .datepicker-bottom-right:before {
-  border-top-color: #39f; }
-
-.datepicker-bottom-left:after, .datepicker-bottom-right:after {
-  border-top-color: #fff;
-  bottom: -4px; }
-
-.datepicker-bottom-right:after, .datepicker-bottom-right:before, .datepicker-top-right:after, .datepicker-top-right:before {
+.datepicker-top-right::before, .datepicker-top-right::after,
+.datepicker-bottom-right::before,
+.datepicker-bottom-right::after {
   left: auto;
   right: 10px; }
 
@@ -140,62 +137,51 @@ article, aside, figure, footer, header, hgroup, nav, section {
   margin: 0;
   padding: 0;
   width: 102%; }
-
-.datepicker-panel > ul:after, .datepicker-panel > ul:before {
-  content: " ";
-  display: table; }
-
-.datepicker-panel > ul:after {
-  clear: both; }
-
-.datepicker-panel > ul > li {
-  background-color: #fff;
-  cursor: pointer;
-  float: left;
-  height: 30px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  width: 30px; }
-
-.datepicker-panel > ul > li:hover {
-  background-color: #e5f2ff; }
-
-.datepicker-panel > ul > li.muted, .datepicker-panel > ul > li.muted:hover {
-  color: #999; }
-
-.datepicker-panel > ul > li.highlighted {
-  background-color: #e5f2ff; }
-
-.datepicker-panel > ul > li.highlighted:hover {
-  background-color: #cce5ff; }
-
-.datepicker-panel > ul > li.picked, .datepicker-panel > ul > li.picked:hover {
-  color: #39f; }
-
-.datepicker-panel > ul > li.disabled, .datepicker-panel > ul > li.disabled:hover {
-  background-color: #fff;
-  color: #ccc;
-  cursor: default; }
-
-.datepicker-panel > ul > li.disabled.highlighted, .datepicker-panel > ul > li.disabled:hover.highlighted {
-  background-color: #e5f2ff; }
-
-.datepicker-panel > ul > li[data-view="month next"], .datepicker-panel > ul > li[data-view="month prev"], .datepicker-panel > ul > li[data-view="year next"], .datepicker-panel > ul > li[data-view="year prev"], .datepicker-panel > ul > li[data-view="years next"], .datepicker-panel > ul > li[data-view="years prev"], .datepicker-panel > ul > li[data-view=next] {
-  font-size: 18px; }
-
-.datepicker-panel > ul > li[data-view="month current"], .datepicker-panel > ul > li[data-view="year current"], .datepicker-panel > ul > li[data-view="years current"] {
-  width: 150px; }
-
-.datepicker-panel > ul[data-view=months] > li, .datepicker-panel > ul[data-view=years] > li {
-  height: 52.5px;
-  line-height: 52.5px;
-  width: 52.5px; }
-
-.datepicker-panel > ul[data-view=week] > li, .datepicker-panel > ul[data-view=week] > li:hover {
-  background-color: #fff;
-  cursor: default; }
+  .datepicker-panel > ul::before, .datepicker-panel > ul::after {
+    content: " ";
+    display: table; }
+  .datepicker-panel > ul::after {
+    clear: both; }
+  .datepicker-panel > ul > li {
+    background: white;
+    border-radius: 100%;
+    cursor: pointer;
+    float: left;
+    height: 30px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    width: 30px; }
+    .datepicker-panel > ul > li:hover {
+      background: #eff1f1; }
+    .datepicker-panel > ul > li.muted, .datepicker-panel > ul > li.muted:hover {
+      color: #999; }
+    .datepicker-panel > ul > li.highlighted {
+      background-color: #eff1f1;
+      color: #0e1010; }
+      .datepicker-panel > ul > li.highlighted:hover {
+        background-color: #94121f;
+        color: white; }
+    .datepicker-panel > ul > li.picked, .datepicker-panel > ul > li.picked:hover {
+      color: var(--brand-color); }
+    .datepicker-panel > ul > li.disabled, .datepicker-panel > ul > li.disabled:hover {
+      background-color: white;
+      color: #eff1f1;
+      cursor: default; }
+      .datepicker-panel > ul > li.disabled.highlighted, .datepicker-panel > ul > li.disabled:hover.highlighted {
+        background-color: #eff1f1; }
+    .datepicker-panel > ul > li[data-view="years prev"], .datepicker-panel > ul > li[data-view="year prev"], .datepicker-panel > ul > li[data-view="month prev"], .datepicker-panel > ul > li[data-view="years next"], .datepicker-panel > ul > li[data-view="year next"], .datepicker-panel > ul > li[data-view="month next"], .datepicker-panel > ul > li[data-view="next"] {
+      font-size: 18px; }
+    .datepicker-panel > ul > li[data-view="years current"], .datepicker-panel > ul > li[data-view="year current"], .datepicker-panel > ul > li[data-view="month current"] {
+      width: 150px; }
+  .datepicker-panel > ul[data-view="years"] > li, .datepicker-panel > ul[data-view="months"] > li {
+    height: 52.5px;
+    line-height: 52.5px;
+    width: 52.5px; }
+  .datepicker-panel > ul[data-view="week"] > li, .datepicker-panel > ul[data-view="week"] > li:hover {
+    background-color: white;
+    cursor: default; }
 
 .datepicker-hide {
   display: none; }
@@ -403,7 +389,6 @@ a {
       font-size: 1.3rem; } }
 
 textarea.text-input {
-  height: 160px;
   resize-x: none; }
 
 /**
@@ -2859,9 +2844,6 @@ blockquote {
  * The `.page` div acts as a container for all the content on a page. Including
  * the header and footer.
  */
-.page {
-  zoom: 1; }
-
 .band {
   padding: 60px 0 30px; }
 
