Updated GBM to show Sam

--- a/sites/gbm/scss/theme.scss
+++ b/sites/gbm/scss/theme.scss
@@ -88,6 +88,7 @@
 @import 'modules/_modules-filters.scss';
 @import 'modules/_modules-minicart.scss';
 @import 'modules/_modules-search.scss';
+@import 'modules/_modules-accordion.scss';
 
 
 
