--- a/sites/gbm/css/theme.css
+++ b/sites/gbm/css/theme.css
@@ -2834,6 +2834,79 @@ blockquote {
         -ms-transform: scale(0.9);
             transform: scale(0.9); }
 
+/*------------------------------------*\
+  #ACCORDION
+\*------------------------------------*/
+.accordion {
+  margin-bottom: 30px;
+  overflow: hidden;
+  text-align: left; }
+  .accordion + .form-group {
+    margin-top: -15px; }
+
+.accordion__item {
+  overflow: hidden;
+  border-bottom: 1px solid #b3bcbc; }
+
+.accordion__title {
+  cursor: pointer;
+  display: block;
+  font-weight: 700;
+  margin: 0 !important;
+  padding: 7.5px 30px 7.5px 0;
+  position: relative;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s; }
+
+.accordion__title-icon {
+  position: absolute;
+  display: block;
+  float: right;
+  height: 13px;
+  width: 13px;
+  right: 0;
+  top: 10px; }
+
+.accordion__title-icon:before,
+.accordion__title-icon:after {
+  background: #b3bcbc;
+  content: "";
+  position: absolute;
+  -webkit-transition: all .20s ease-in;
+  transition: all .20s ease-in; }
+
+.accordion__title-icon:before {
+  height: 100%;
+  margin-left: -1px;
+  top: 0;
+  left: 50%;
+  width: 1px; }
+
+.accordion__title-icon:after {
+  height: 1px;
+  margin-top: -1px;
+  top: 50%;
+  left: 0;
+  width: 100%; }
+
+.accordion__title.open .accordion__title-icon:before {
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg); }
+
+.accordion__title.open .accordion__title-icon:after {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg); }
+
+.accordion__copy {
+  display: none;
+  padding: 0 0 28px; }
+
+.accordion__copy p {
+  margin: 0;
+  padding: 0; }
+
 /* ==========================================================================
    #LAYOUT
    ========================================================================== */
