--- a/sites/gbm/scss/modules/_modules-box.scss
+++ b/sites/gbm/scss/modules/_modules-box.scss
@@ -1,5 +1,25 @@
 
 /*------------------------------------*\
+    #BOX
+\*------------------------------------*/
+
+.box {
+	background: $white;
+	border: $border;
+	box-sizing: border-box;
+	padding: $vertical-spacing $gutter 0;
+}
+
+.box--clear {
+	background: none;
+	border: none;
+}
+
+
+
+
+
+/*------------------------------------*\
     #OVERLAYS
 \*------------------------------------*/
 
