--- a/sites/gbm/css/theme.css
+++ b/sites/gbm/css/theme.css
@@ -2574,6 +2574,25 @@ blockquote {
   /* [4] */
   /* [5] */
   /* [6] */ }
+  .product__info h1,
+  .product__info h2,
+  .product__info h3,
+  .product__info h4 {
+    font-size: 15px;
+    font-size: 1.5rem;
+    /* [1] */
+    /* [2] */
+    /* [3] */
+    /* [4] */
+    /* [5] */
+    /* [6] */ }
+    @media (min-width: 76.25em) {
+      .product__info h1,
+      .product__info h2,
+      .product__info h3,
+      .product__info h4 {
+        font-size: 18px;
+        font-size: 1.8rem; } }
   @media (min-width: 64em) {
     .product__info {
       clear: left; } }
